--- a/forlan.html
+++ b/forlan.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Você <span>acertou!</span></h1>
     <h2>Você descobriu o numero secreto!</h2>
-<img src="" alt="">
-    <script src="AAaa.js"></script>
+<img src="jogo-tigrinho-falencia-pessoas-vicio.jpg" alt="">
+    <script src="xabi.js"></script>
 
 </body>
 </html>
