--- a/forlan.html
+++ b/forlan.html
@@ -8,10 +8,11 @@
 
 </head>
 <body>
+ <center>
     <h1>Você <span>acertou!</span></h1>
     <h2>Você descobriu o numero secreto!</h2>
 <img src="jogo-tigrinho-falencia-pessoas-vicio.jpg" alt="">
     <script src="xabi.js"></script>
-
+</center>
 </body>
 </html>
